Update ActiveState.java
changed getfirst() to get(0)